# job-log

./: .gitignore  README.md  pyproject.toml
.claude/commands/: parse-job-email.md  scan-jobs.md
src/job_log/: __init__.py  cli.py  db.py
