[project]
name = "job-log"
version = "0.1.0"
description = "A modern CLI to track your job applications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
job = "job_log.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_log"]
